banner padding issue and ul align issue fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -104,7 +104,6 @@ html {
 }
 
 .banner {
-    width: 85%;
     text-align: center;
     background: linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%), url('../Images/Group-13.png');
     background-size: 100% 100%;
@@ -177,6 +176,10 @@ html {
     font-size: 1.3rem;
     font-weight: 800;
     margin-bottom: 15px;
+}
+
+.tour-text>ul {
+    padding-left: 20px;
 }
 
 .tour-text>ul>li,
